# ex-proposal-delegation-model

./: .gitignore  Makefile  README.md  daml.yaml  run_tests.py  start_test_env.sh
dabl/: ledger-parties-test.json
daml/: .CopyTrigger.daml.swp  Main.daml  Setup.daml  Symphony.daml  Templates.daml  Tests.daml
daml/Model/: Company.daml  Notification.daml  Proposal.daml
symphony/: pyproject.toml  requirements.txt
symphony/bot/: __init__.py  action_processor.py  im_listener.py  main.py  model.py  render.py  symphony_integration.py  utils.py
triggers/: daml.yaml  run_trigger.sh
triggers/src/: CopyTrigger.daml  ProposalTrigger.daml
